2008-04-26  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * Win32/libsamplerate-0.def
    Add src_int_to_float/float_to_int_array to exports.

2008-03-23  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * doc/*.html
    Final documentation tweaks for release.

2008-03-17  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/throughput_test.c
    Include config.h and float_cast.h." -- tests/throughput_test.c 

    * Make.bat Win32/*
    Bunch more Win32 updates.

2008-03-15  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/* tests/*
    Remove all traces of old SRC_OLD_SINC_* converters.

    * Make.bat Win32/*
    Preliminary Win32 updates.

    * configure.ac
    Bump version to 0.1.3.

2008-03-11  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * doc/api_simple.html
    Try once again to convince people that src_simple cannot be used on small
    chunks of a larger piece of audio.

2008-03-08  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/snr_bw_test.c
    Remove bodgy old throughput calculations.

2008-03-07  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/benchmark.c tests/throughput_test.c
    Rename former to the latter and make significant improvements.

2008-03-04  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/old_high_qual_coeffs.h src/old_mid_qual_coeffs.h
    Copy these from the old versions.

    * src/high_qual_coeffs.h src/mid_qual_coeffs.h 
    New versions of the coefficients with improved SNR.	

2008-02-10  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * Makefile.am configure.ac
    Add DISTCHECK_CONFIGURE_FLAGS to Makefile.am and a bunch of configure
    cleanups.

2008-01-21  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * examples/audio_out.c
    Apply patch from Yair K. to fix compiles with OSS v4.

2007-07-07  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * acinclude.m4
    Add AC_CHECK_SIGNAL macro.

    * configure.ac